--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,24 @@ https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugi
 
                 </configuration>
             </plugin>
+            <!--打包插件 -->
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <descriptors>
+                        <descriptor>src/main/resources/assembly.xml</descriptor>
+                    </descriptors>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
 
         </plugins>
 
